force-app/main/default/objects/Accommodation_Option__c/Accommodation_Option__c.object-meta.xml
<CustomObject>
    <description>Grounded knowledge library. Every row carries a source URL. The agent must not answer from outside this library.</description>
    <label>Accommodation Option</label>
    <nameField>
        <label>Option Number</label>
        <type>AutoNumber</type>
        <displayFormat>AO-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Accommodation Options</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>