force-app/main/default/objects/Accommodation_Option__c/fields/Plain_Language_Summary__c.field-meta.xml
<CustomField>
    <fullName>Plain_Language_Summary__c</fullName>
    <label>Plain Language Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>