force-app/main/default/objects/Accommodation_Option__c/fields/Precedent_Count__c.field-meta.xml
<CustomField>
    <fullName>Precedent_Count__c</fullName>
    <label>Precedent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>