force-app/main/default/objects/Accommodation_Option__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <description>Required for third-party data authorization under Official Rules section 4.V.</description>
    <label>Source URL</label>
    <type>Url</type>
</CustomField>