force-app/main/default/objects/Accommodation_Option__c/fields/Typical_Cost__c.field-meta.xml
<CustomField>
    <fullName>Typical_Cost__c</fullName>
    <label>Typical Cost</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>