force-app/main/default/objects/Accommodation_Option__c/fields/Zero_Cost__c.field-meta.xml
<CustomField>
    <fullName>Zero_Cost__c</fullName>
    <label>Zero Cost</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>