force-app/main/default/objects/Accommodation_Option__c/listViews/All_Options.listView-meta.xml
<ListView>
    <fullName>All_Options</fullName>
    <columns>NAME</columns>
    <columns>Option__c</columns>
    <columns>Plain_Language_Summary__c</columns>
    <columns>Zero_Cost__c</columns>
    <columns>Typical_Cost__c</columns>
    <columns>Source_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>The whole library</label>
</ListView>