force-app/main/default/objects/Accommodation_Option__c/listViews/Has_A_Published_Price.listView-meta.xml
<ListView>
    <fullName>Has_A_Published_Price</fullName>
    <columns>NAME</columns>
    <columns>Option__c</columns>
    <columns>Typical_Cost__c</columns>
    <columns>Source_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Typical_Cost__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Has a published price</label>
</ListView>